--- a/webpage/css/def.css
+++ b/webpage/css/def.css
@@ -1,7 +1,7 @@
 
 nav ul {
     background: #71b72c;
-//    box-shadow: 7px 7px 7px rgba(0,0,0,0.25);
+    //box-shadow: 0px 0px 100px rgba(0,0,0,0.5);
     padding:  0px;
     border-radius: 5px;  
     list-style: none;
@@ -17,6 +17,7 @@ nav ul:after {
 
 nav ul li:hover {
     background: #3e7705;
+    box-shadow: 0px 0px 75px rgba(0,0,0,0.8);
     border-radius: 5px;  
 }
 nav ul li:hover a {
