--- a/webpage/css/def.css
+++ b/webpage/css/def.css
@@ -1,9 +1,10 @@
 
 nav ul {
     background: #71b72c;
-    //box-shadow: 0px 0px 100px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 100px rgba(0,0,0,0.5);
     padding:  0px;
-    border-radius: 5px;  
+    border-radius: 3px;
+    padding: 0px;
     list-style: none;
     position: relative;
     display: inline-table;
@@ -11,23 +12,23 @@ nav ul {
 
 nav ul:after {
     content: ""; clear: both; display: block;
-    border-radius: 5px;  
+    border-radius: 3px;  
 }
 
 
 nav ul li:hover {
-    background: #3e7705;
-    box-shadow: 0px 0px 75px rgba(0,0,0,0.8);
-    border-radius: 5px;  
+    /* background: #3e7705; */
+    /* box-shadow: 0px 0px 70px rgba(0,0,0,1); */
+    /* border-radius: 3px;   */
 }
 nav ul li:hover a {
     color: #fff;
-    border-radius: 5px;  
+    border-radius: 3px;  
 }
 
 nav ul li a {
     display: block;
-    padding: 14px 14px;
+    padding: 10px 20px;
     color: black; text-decoration: none;
     font-size: 14px;
     border-bottom: 0px solid #575f6a;
@@ -49,7 +50,7 @@ body, html {
 
 #leftcol {
     height: 100vh;
-    width: 15%;
+    width: 20%;
     float:left;
     border-style: solid;
     border-width: 0;
@@ -58,7 +59,7 @@ body, html {
 #rightcol {
     float: right;
     position: absolute;
-    width: 85%;
+    width: 80%;
     height: 100vh;
     border-style: solid;
     border-width: 0;
