--- a/webpage/css/style.css
+++ b/webpage/css/style.css
@@ -8,7 +8,8 @@
     --color-alge: #7999a9;
     --color-flower: #353866;
     --color-smoke: #e4e4e4;
-    --font-face: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    /* --font-face: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
+    --font-face: Helvetica;
 }
 
 html {
@@ -32,8 +33,8 @@ body {
     background: white;
     font-family: var(--font-face);
     font-size: 16px;
-    font-weight: 700;
-    line-height: 1;
+    font-weight: normal;
+    line-height: 2;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
@@ -50,6 +51,7 @@ body {
 body.linked .button, body.linked h1 {
     opacity: .3;
     -webkit-transition: opacity 300ms linear;
+    transition-duration: 0.4s;
     transition: opacity 300ms linear;
 }
 body.linked p {
@@ -65,10 +67,10 @@ h1 {
     color: var(--color-dark);
     font-family: var(--font-face);
     font-size: 32px;
-    font-weight: 700;
+    font-weight: normal;
 }
 h1 span {
-    font-weight: 400;
+    font-weight: normal;
 }
 
 p {
@@ -78,7 +80,7 @@ p {
     transition: color 300ms linear;
     /* text-align: center; */
     color: var(--color-dark);
-    font-weight: 400;
+    font-weight: normal;
     line-height: 1.5;
 }
 
@@ -86,10 +88,10 @@ a, a:visited {
     text-decoration: none;
     /* color: var(--color-ocean); */
     /* color: #ffffff; */
-    font-weight: 500;
+    font-weight: normal;
 }
 a:hover, a:visited:hover {
-    text-decoration: underline;
+    /* text-decoration: underline; */
     text-decoration: none;
     /* color: var(--color-ocean); */
     /* color: #ffffff; */
@@ -142,7 +144,7 @@ a:hover, a:visited:hover {
     border: 0 none;
     border-radius: 4px;
     font-size: 13px;
-    font-weight: 500;
+    font-weight: bold;
     line-height: 1.3;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -160,18 +162,19 @@ a:hover, a:visited:hover {
     box-shadow: 5px 5px 10px var(--color-smoke);
 }
 .button:hover {
-    -webkit-transition: all 150ms linear;
-    transition: all 150ms linear;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
     opacity: .85;
 }
 .button:active {
-    -webkit-transition: all 150ms linear;
-    transition: all 150ms linear;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
     opacity: .75;
 }
 .button:focus {
-    outline: 1px dotted #959595;
-    outline-offset: -4px;
+    /* outline: 1px dotted #959595; */
+    /* outline-offset: -4px; */
+    outline: none;
 }
 
 .button.-regular {
@@ -179,8 +182,8 @@ a:hover, a:visited:hover {
     background-color: #f2f2f2;
 }
 .button.-regular:hover {
-    color: #202129;
-    background-color: #e1e2e2;
+    color: white;
+    background-color: var(--color-ocean);
     opacity: 1;
 }
 .button.-regular:active {
@@ -193,8 +196,13 @@ a:hover, a:visited:hover {
     background: var(--color-dark);
 }
 .button.-dark:focus {
-    outline: 1px dotted white;
-    outline-offset: -4px;
+    /* outline: 1px dotted white; */
+    /* outline-offset: -4px; */
+    outline: none;
+}
+.button.-dark:hover {
+    color: black;
+    background-color: #e1e2e2;
 }
 
 .button.-green {
@@ -326,3 +334,5 @@ body, html {
     line-height: 0;
     clear: both;
 }
+
+
