--- a/webpage/css/style.css
+++ b/webpage/css/style.css
@@ -8,8 +8,7 @@
     --color-alge: #7999a9;
     --color-flower: #353866;
     --color-smoke: #e4e4e4;
-    /* --font-face: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
-    --font-face: Helvetica;
+    --font-face: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 html {
@@ -162,13 +161,13 @@ a:hover, a:visited:hover {
     box-shadow: 5px 5px 10px var(--color-smoke);
 }
 .button:hover {
-    -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+    -webkit-transition: all 30ms linear;
+    transition: all 30ms linear;
     opacity: .85;
 }
 .button:active {
-    -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+    -webkit-transition: all 30ms linear;
+    transition: all 30ms linear;
     opacity: .75;
 }
 .button:focus {
